fix portrait mode and touch on mobile

--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -71,7 +71,7 @@
         'maincenterleft maincenter maincenterright'
         'mainfooter mainfooter mainfooter';
     grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto auto;
 }
 
 .playingMessage {
