--- a/Client/Shared/Team.razor.css
+++ b/Client/Shared/Team.razor.css
@@ -40,6 +40,7 @@
     background: none;
     border: none;
     text-align: center;
+    width: 100%;
 }
 /* Portrait */
 @media only screen and (orientation: portrait) {
